# tensor-networks

./: .gitignore  .gitmodules  LICENSE  Project.toml  README.md  requirements.txt
data/: dmrg_h6_no.npz  h2_ccpvdz_R0p74.npz  h2_ccpvdz_no_from_dmrg.npz  h2_no_from_dmrg.npz  h2_sto3g_R0p74.npz  h6_sto3g_R1p2.npz  tn_no_from_dmrg.npz
examples/: iTensorTutorial.ipynb
notebooks/: DMRG.ipynb  LUCJ.ipynb  VQE.ipynb  binding_curves.ipynb  dmrg.ipynb  lucj_hydrogen.ipynb  lucj_initialization.ipynb  lucj_nitrogen.ipynb  memory.ipynb  mps.ipynb  qubit_connectivity.ipynb  state_preparation.ipynb  vqe.ipynb
notebooks/figures/: circuit_1-ucj.tex  circuit_body.tex  energy_curves.tex
python/: aer_mps.py  dmrg_convergence.py  pec_dmrg.py  pec_sim.py  qubit_connectivity.py  qubit_connectivity_layers.py  sqd.py
python/tensor-networks/: mps_circuit_simulator.py
python/tensor-networks/VQE/: gradient.py  qnspsa.py  spsa.py
scripts/: dmrg_pec.py  dmrg_sweep.py  n2_fci.py
scripts/cluster/: run.sh  runjl.sh
src/: README.md  h2_ccpvdz.jl  h2_ccpvdz.py  h2_sto3g.py  h2_tn_dmrg.jl  h6_sto3g_R1p2.py  h6_tn_dmrg.jl
src/fqcs/: pyproject.toml
src/fqcs/src/qiskit/: __init__.py  circuit_expectation.py  ucj_param_energy_fn.py
src/fqcs/tests/: circuit_expectation_test.py
