[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fqcs"
version = "0.1.0"
description = "Handy utilities shared across my scripts"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "David Omanovic"}]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "mypy>=1.10", "ruff>=0.5"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
